--- a/index.html
+++ b/index.html
@@ -24,9 +24,47 @@
 
 </head>
 
-<body>
-
+<body data-spy="scroll" data-target="#navbarResponsive">
 	<!--- Start Course Section -->
+
+	<div id="home">
+		<!-- Navigation -->
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+			<div class="container-fluid">
+				<a href="#home" class="navbar-brand"><img src="img/nuno.png" alt=""></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+					<span class="custom-toggler-icon"><i class="fas fa-bars"></i></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarResponsive">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+							<a href="#home" class="nav-link">Home</a>
+						</li>
+						<li class="nav-item">
+							<a href="#pricing" class="nav-link">Pricing</a>
+						</li>
+						<li class="nav-item">
+							<a href="#team" class="nav-link">Team</a>
+						</li>
+						<li class="nav-item">
+							<a href="#skills" class="nav-link">Skills</a>
+						</li>
+						<li class="nav-item">
+							<a href="#clients" class="nav-link">Clients</a>
+						</li>
+						<li class="nav-item">
+							<a href="#contact" class="nav-link">Contact</a>
+						</li>
+					</ul>
+				</div>
+
+			</div>
+		</nav>
+		<!-- End Navigation -->
+	</div>
+
+
 	<div id="course" class="offset">
 
 		<div class="col-12 narrow text-center">
