Added Landing and Caption

--- a/index.html
+++ b/index.html
@@ -58,10 +58,26 @@
 						</li>
 					</ul>
 				</div>
-
 			</div>
 		</nav>
 		<!-- End Navigation -->
+
+		<!-- Start Landing Section -->
+		<div class="landing">
+			<div class="home-wrap">
+				<div class="home-inner">
+
+				</div>
+			</div>
+		</div>
+
+		<div class="caption text-center">
+			<h1>Welcome to NUNO</h1>
+			<h3>Udemy Bootstrap 4 course</h3>
+			<a class="btn btn-outline-light btn-lg" href="#course">Getting Started</a>
+		</div>
+		<!-- End Landing Section -->
+
 	</div>
 
 
