--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Nuno - Responsive Bootstrap Theme</title>
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -30,34 +29,33 @@
 	<div id="home">
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-			<div class="container-fluid">
-				<a href="#home" class="navbar-brand"><img src="img/nuno.png" alt=""></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-					<span class="custom-toggler-icon"><i class="fas fa-bars"></i></span>
-				</button>
+			<a class="navbar-brand" href="#"><img src="img/nuno.png" alt=""></a>
 
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
-							<a href="#home" class="nav-link">Home</a>
-						</li>
-						<li class="nav-item">
-							<a href="#pricing" class="nav-link">Pricing</a>
-						</li>
-						<li class="nav-item">
-							<a href="#team" class="nav-link">Team</a>
-						</li>
-						<li class="nav-item">
-							<a href="#skills" class="nav-link">Skills</a>
-						</li>
-						<li class="nav-item">
-							<a href="#clients" class="nav-link">Clients</a>
-						</li>
-						<li class="nav-item">
-							<a href="#contact" class="nav-link">Contact</a>
-						</li>
-					</ul>
-				</div>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#home">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#pricing">Pricing</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#team">Team</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#skills">Skills</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#clients">Clients</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#contact">Contact</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
 		<!-- End Navigation -->
