Finished with landing

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
 		<!-- Start Landing Section -->
 		<div class="landing">
 			<div class="home-wrap">
-				<div class="home-inner">
-
-				</div>
+				<div class="home-inner"></div>
 			</div>
 		</div>
 
@@ -77,6 +75,7 @@
 		<!-- End Landing Section -->
 
 	</div>
+	<!-- End Home Section -->
 
 
 	<div id="course" class="offset">
