--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
 	<div id="home">
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-			<a class="navbar-brand" href="#"><img src="img/nuno.png" alt=""></a>
+			<div class="container-fluid">
 
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+				<a class="navbar-brand" href="#"><img src="img/nuno.png" alt=""></a>
 
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="#home">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#pricing">Pricing</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#team">Team</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#skills">Skills</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#clients">Clients</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#contact">Contact</a>
-					</li>
-				</ul>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
+				<div class="collapse navbar-collapse" id="navbarResponsive">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="#home">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#features">Features</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#resources">Resources</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#clients">Clients</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#contact">Contact</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 		<!-- End Navigation -->
@@ -77,17 +77,54 @@
 	</div>
 	<!-- End Home Section -->
 
-
+	<!-- Start Course Section -->
 	<div id="course" class="offset">
-
 		<div class="col-12 narrow text-center">
 			<h1>Nuno Theme Advanced Bootstrap Course</h1>
 			<p class="lead">Learn Bootstrap by creating an advanced Bootstrap 4 Responsive Website Template from scratch,
 				with no steps skipped!</p>
-			<a class="btn btn-secondary btn-md" href="https://w3newbie.com/courses/" target="_blank">W3NEWBIE COURSES</a>
+			<a class="btn btn-secondary btn-md" href="" target="_blank">MY COURSES</a>
 		</div>
-
 	</div>
+	<!-- End Course Section -->
+
+	<!-- Start Features Section -->
+	<div id="features" class="offset">
+		<div class="jumbotron">
+			<div class="narrow">
+				<div class="col-12">
+					<h3 class="heading">Features</h3>
+					<div class="heading-underline"></div>
+				</div>
+				<div class="row text-center">
+					<div class="col-md-4">
+						<div class="feature">
+							<i class="fas fa-play-circle fa-4x" data-fa-transform="shrink-3 up-5"></i>
+							<h3>Custom Animation</h3>
+							<p>Animate.css and Waypoints.js allow for smooth animations scrolling down the site.</p>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="feature">
+							<i class="fas fa-sliders-h fa-4x" data-fa-transform="shrink-4.5 up-4.5"></i>
+							<h3>Content Slider</h3>
+							<p>Owl.Carousel.js makes navigating content sliders seamless with it's content carousel naviation.
+							</p>
+						</div>
+					</div>
+					<div class="col-md-4">
+						<div class="feature">
+							<i class="fab fa-wpforms fa-4x" data-fa-transform="shrink-4 up-5"></i>
+							<h3>Contact Form</h3>
+							<p>The Bootstrap HTML form will send directly to your email address using PHPMailer.php.</p>
+						</div>
+					</div>
+				</div>
+			</div><!-- End Narrow -->
+		</div><!-- End Jumbotron -->
+	</div> <!-- End Features Section -->
+
+
 	<!--- End Course Section -->
 
 	<!--- Script Source Files -->
@@ -97,7 +134,6 @@
 	<!--- End of Script Source Files -->
 
 	<!-- Script Source Files -->
-
 	<!-- Plugins.js -->
 	<script src="js/plugins.js"></script>
 	<!-- Font Awesome https://fontawesome.com/  https://use.fontawesome.com/releases/v5.11.2/js/all.js -->
