Done with Resource Built with care section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<!-- Start Features Section -->
 	<div id="features" class="offset">
 		<div class="jumbotron">
-			<div class="narrow">
+			<div class="narrow text-center">
 				<div class="col-12">
 					<h3 class="heading">Features</h3>
 					<div class="heading-underline"></div>
@@ -101,14 +101,16 @@
 						<div class="feature">
 							<i class="fas fa-play-circle fa-4x" data-fa-transform="shrink-3 up-5"></i>
 							<h3>Custom Animation</h3>
-							<p>Animate.css and Waypoints.js allow for smooth animations scrolling down the site.</p>
+							<p class="lead">Animate.css and Waypoints.js allow for smooth animations scrolling down the site.
+							</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="feature">
 							<i class="fas fa-sliders-h fa-4x" data-fa-transform="shrink-4.5 up-4.5"></i>
 							<h3>Content Slider</h3>
-							<p>Owl.Carousel.js makes navigating content sliders seamless with it's content carousel naviation.
+							<p class="lead">Owl.Carousel.js makes navigating content sliders seamless with it's content
+								carousel naviation.
 							</p>
 						</div>
 					</div>
@@ -116,7 +118,8 @@
 						<div class="feature">
 							<i class="fab fa-wpforms fa-4x" data-fa-transform="shrink-4 up-5"></i>
 							<h3>Contact Form</h3>
-							<p>The Bootstrap HTML form will send directly to your email address using PHPMailer.php.</p>
+							<p class="lead">The Bootstrap HTML form will send directly to your email address using
+								PHPMailer.php.</p>
 						</div>
 					</div>
 				</div>
@@ -124,6 +127,46 @@
 		</div><!-- End Jumbotron -->
 	</div> <!-- End Features Section -->
 
+	<!-- Start Resource Section -->
+	<div id="resources" class="offset">
+		<div class="fixed-background">
+			<div class="row dark text-center">
+				<div class="col-12">
+					<h3 class="heading">Built With Care</h3>
+					<div class="heading-underline"></div>
+				</div>
+				<div class="col-md-4">
+					<h3>HTML 5</h3>
+					<div class="feature">
+						<i class="fas fa-code fa-3x"></i>
+					</div>
+					<p class="lead">Built with the latest HTML 5 </p>
+				</div>
+				<div class="col-md-4">
+					<h3>BOOTSTRAP 4</h3>
+					<div class="feature">
+						<i class="fas fa-bold fa-3x"></i>
+					</div>
+					<p class="lead">Built with the latest Bootstrap 4</p>
+				</div>
+				<div class="col-md-4">
+					<h3>CSS 3</h3>
+					<div class="feature">
+						<i class="fab  fa-CSS fa-3x"></i>
+					</div>
+					<p class="lead">Built with the latest CSS 3</p>
+				</div>
+
+			</div><!-- End dark row -->
+
+			<div class="fixed-wrap">
+				<div class="fixed">
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End Resource Section -->
 
 	<!--- End Course Section -->
 
