--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				<div class="col-md-4">
 					<h3>CSS 3</h3>
 					<div class="feature">
-						<i class="fab  fa-CSS fa-3x"></i>
+						<i class="fab  fa-css3 fa-3x"></i>
 					</div>
 					<p class="lead">Built with the latest CSS 3</p>
 				</div>
@@ -167,6 +167,75 @@
 		</div>
 	</div>
 	<!-- End Resource Section -->
+
+	<!-- Start Clients Section -->
+	<div id="course" class="offset">
+		<div class="jumbotron">
+			<div class="col-12 text-center">
+				<h3 class="heading">Clients</h3>
+				<div class="heading-underline"></div>
+
+				<div class="row">
+					<div class="col-md-6">
+						<div class="row">
+							<div class="col-md-4">
+								<img src="img/client1.png" alt="">
+							</div>
+							<div class="col-md-8">
+								<blockquote>
+									<i class="fas fa-quote-left"></i>
+									I see Nuno support sdsfadsf asdf sadf sadf asd fsad f asdf sadf.
+									<hr class="clients-hr">
+									<cite>&#8212; Eric, Small Business Owner</cite>
+								</blockquote>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="row">
+							<div class="col-md-4">
+								<img src="img/client2.png" alt="">
+							</div>
+							<div class="col-md-8">
+								<blockquote>
+									<i class="fas fa-quote-left"></i>
+									I see Nuno support sdsfadsf asdf sadf sadf asd fsad f asdf sadf.
+									<hr class="clients-hr">
+									<cite>&#8212; Tina, Small Business Owner</cite>
+								</blockquote>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-12 narrow text-center">
+			<p class="lead">Want to learn more about developing bootstrap themes?</p>
+			<a href="#" class="btn btn-secondary btn-md" target="_blank">Bootstrap Course</a>
+		</div>
+	</div>
+	<!-- End Clients Section -->
+
+
+	<!-- Start Contact Section -->
+	<footer>
+		<div id="contact" class="offset">
+			<div class="row justify-content-center">
+				<div class="col-md-5 text-center">
+					<img src="img/nuno.png" alt="">
+					<p>At our core is a collections sdkfljsdflkjasdfkjasdf adskjfsakdfjasdfk asdfkjsdf kasdjf.</p>
+					<strong>Contact Info</strong>
+					<p>(888) 888-8888<br>email@sdfjsdfk.com</p>
+					<a href="" target="_blank"><i class="fab fa-facebook-square"></i></a>
+					<a href="" target="_blank"><i class="fab fa-twitter-square"></i></a>
+					<a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+				</div>
+				<hr class="socket">
+				&copy; Nuno Theme.
+			</div>
+		</div>
+	</footer>
+	<!-- End Contact Section -->
 
 	<!--- End Course Section -->
 
