--- a/index.html
+++ b/index.html
@@ -156,12 +156,9 @@
 					</div>
 					<p class="lead">Built with the latest CSS 3</p>
 				</div>
-
 			</div><!-- End dark row -->
-
 			<div class="fixed-wrap">
 				<div class="fixed">
-
 				</div>
 			</div>
 		</div>
@@ -169,12 +166,11 @@
 	<!-- End Resource Section -->
 
 	<!-- Start Clients Section -->
-	<div id="course" class="offset">
+	<div id="clients" class="offset">
 		<div class="jumbotron">
 			<div class="col-12 text-center">
 				<h3 class="heading">Clients</h3>
 				<div class="heading-underline"></div>
-
 				<div class="row">
 					<div class="col-md-6">
 						<div class="row">
@@ -209,6 +205,7 @@
 				</div>
 			</div>
 		</div>
+
 		<div class="col-12 narrow text-center">
 			<p class="lead">Want to learn more about developing bootstrap themes?</p>
 			<a href="#" class="btn btn-secondary btn-md" target="_blank">Bootstrap Course</a>
